--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 body {
     background-color: #f8f9fa;
-    font-family: 'Arial', sans-serif;
+    font-family: Inter, sans-serif;
+}
+
+.navbar {
+    width: 100%;
+    display: flex;
+    /*justify-content: center;*/
 }
 
 .navbar-title {
     font-weight: bold;
+    text-decoration: none;
 }
 
 .card {
@@ -18,6 +27,16 @@ body {
 
 .card-text {
     color: #343a40;
+}
+
+.btn {
+    color: #ffffff;
+    text-align: center;
+    margin: 2%;
+    border-radius: 5%;
+    cursor: pointer;
+    text-decoration: none;
+    max-height: 50px;
 }
 
 .btn-primary {
@@ -40,7 +59,7 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    /*max-width: 800px;*/
     margin-top: 20px;
 }
 
@@ -52,6 +71,11 @@ img.card-img-top {
 
 .btn-block {
     display: block;
-    width: 100%;
+    width: 20%;
     margin-bottom: 10px;
+}
+
+.enlaces {
+    display: flex;
+    justify-content: center;
 }
