--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 body {
-    background-color: #f8f9fa;
+    background-color: #ead19f;
     font-family: Inter, sans-serif;
 }
 
